--- a/DartSPA/web/dartspa.html
+++ b/DartSPA/web/dartspa.html
@@ -7,9 +7,16 @@
     <title>DartSPA</title>
     <script async type="application/dart" src="dartspa.dart"></script>
     <script async src="packages/browser/dart.js"></script>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="dartspa.css">
+    <link href="http://fonts.googleapis.com/css?family=Rancho" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Gudea" rel="stylesheet" type="text/css">
   </head>
   <body>
-     <div id="dartspa"></div>
+     <div  class="pure-g">
+      <div class="pure-u-1-5"></div>
+      <div class="pure-u-3-5 dartspa" id="dartspa"></div>
+      <div class="pure-u-1-5"></div>
+     </div>
   </body>
 </html>
